--- a/test.html
+++ b/test.html
@@ -1,22 +1,14 @@
+<!DOCTYPE html>
 <html>
 <head>
-   <script src="https://code.jquery.com/qunit/qunit-1.12.0.js"></script>
-   <script src="romans.js"></script>
-   <script src="tests.js"></script>
-   <script>
-  document.addEventListener("DOMContentLoaded", function() {
-    if (window.convertIntegerToRoman && window.convertRomanToInteger) {
-      console.log("Funciones cargadas correctamente.");
-    } else {
-      console.error("Las funciones no están disponibles.");
-    }
-  });
-</script>
-
-   <link rel="stylesheet" type="text/css" href="https://code.jquery.com/qunit/qunit-1.12.0.css">
+    <title>Roman Numerals Test</title>
+    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.14.0.css">
 </head>
 <body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
+    <script src="roman.js"></script>
+    <script src="https://code.jquery.com/qunit/qunit-2.14.0.js"></script>
+    <script src="test.js"></script>
 </body>
 </html>
